# DirectFilePushClient

./: .CMakeLists.txt.kate-swp  .gitignore  CMakeLists.txt  DirectFilePushClient.flatpak  README.md  addipwindow.cpp  addipwindow.h  addipwindow.ui  com.GoldenDragonJD.DirectFilePushClient.yml  encryptionwindow.cpp  encryptionwindow.h  encryptionwindow.ui  filemessage.cpp  filemessage.h  filemessage.ui  flatpak-builder.sh  hmac.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  message.cpp  message.h  message.ui  notificationmanager.cpp  notificationmanager.h  resource.qrc  settingswindow.cpp  settingswindow.h  settingswindow.ui  toolchain-mingw64.cmake
.qtcreator/: project.json.user.18e18e8
packaging/: com.GoldenDragonJD.DirectFilePushClient.desktop
repo/: summary  summary.idx
repo/refs/heads/app/com.GoldenDragonJD.DirectFilePushClient/x86_64/: master
repo/refs/heads/appstream/: x86_64
repo/refs/heads/appstream2/: x86_64
repo/summaries/: 391e76771c3fb26d452bc33ca8f7639f964f02871d1b91e441f227e8ed6d399a-204dc2ba03f46bfa0e4166c779264cacced50c48e2f46ddbf57ff88117090570.delta  3f143ddbc486abdc9685355053e12a88f6e908b169b7ac810ff6d16965ebba8b-204dc2ba03f46bfa0e4166c779264cacced50c48e2f46ddbf57ff88117090570.delta  45eba52b491885684fdbfc900ab894004f2fae63955f58d72ea89c3217506624-204dc2ba03f46bfa0e4166c779264cacced50c48e2f46ddbf57ff88117090570.delta  488d2a88ce676c554a59e493b92aa9bd2140de51c07fa957460dd37e4cf7404a-204dc2ba03f46bfa0e4166c779264cacced50c48e2f46ddbf57ff88117090570.delta  5f1652db994adb474fcb7dfeab07c5fe22f48d40ad14a95d243a82694ff9b472-204dc2ba03f46bfa0e4166c779264cacced50c48e2f46ddbf57ff88117090570.delta  6922ec917d9582dea8ea816aed4892d5f03516e7774a8d930ed3efacc9768c94-204dc2ba03f46bfa0e4166c779264cacced50c48e2f46ddbf57ff88117090570.delta
